<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:fitsSystemWindows="true">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/tilAddHouseAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            app:startIconDrawable="@drawable/ic_home_black_24dp"
            app:helperText="Ex. 11 Bronte Rd."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialAutoCompleteTextView
                android:id="@+id/edtAddHouseAddress"
                style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:text="11 Bronte Rd."
                android:completionThreshold="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/tilAddHouseCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            app:helperText="Ex. Oakville"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddHouseAddress"
            app:startIconDrawable="@drawable/ic_location_city_black_24dp">

            <com.google.android.material.textview.MaterialAutoCompleteTextView
                android:id="@+id/edtAddHouseCity"
                style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:completionThreshold="1"
                android:text="Oakville" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/tilAddHouseProvince"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/province"
            app:helperText="Ex. Oakville"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddHouseCity"
            app:startIconDrawable="@drawable/ic_my_location_black_24dp">

            <com.google.android.material.textview.MaterialAutoCompleteTextView
                android:id="@+id/edtAddHouseProvince"
                style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:completionThreshold="1"
                android:enabled="false"
                android:text="Ontario" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddHousePostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/postal_code"
            app:helperText="Ex. L6L 0E1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddHouseProvince"
            app:startIconDrawable="@drawable/ic_markunread_mailbox_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddHousePostalCode"
                style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:text="L6L 0E1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/tilAddHouseUnitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unit_name"
            app:helperText="Ex. Basement, Unit 207"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddHousePostalCode"
            app:startIconDrawable="@drawable/ic_label_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddHouseUnitType"
                style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:text="Basement" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView34"
            style="@style/general_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Is this a condominium?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddHouseUnitName" />

        <Switch
            android:id="@+id/swtAddHouseIsCondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layoutDirection="ltr"
            android:text="Not Selected"
            android:switchPadding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView34"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView34" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/tilAddHouseParkingSpaces"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/parking_spaces"
            app:counterMaxLength="2"
            app:helperText="Ex. 3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView34"
            app:startIconDrawable="@drawable/ic_local_parking_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddHouseParkingSpaces"
                style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:ems="10"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>










    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

